# sportsdataverse-web

./: .eslintrc  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  requirements.txt  sendgrid.env  tsconfig.json
.github/workflows/: auto-merge.yml  cron.yml  deploy.yml  merge-to-main.yml  preview.yml
assets/jss/: nextjs-material-kit.js
frontend/: .env.example  .eslintrc.json  .gitignore  LICENSE  README.md  SETUP-packages-auth.md  components.json  eslint.config.mjs  global.d.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/components/: Blog.tsx  Container.tsx  CreateAnIssue.tsx  Footer.tsx  MetaData.tsx  Newsletter.tsx  OgImage.tsx  PageTop.tsx  (+13 more)
pages/: _document.tsx  add-post.tsx  index.tsx
posts/: baseballr-for-baseball-data.md  cfbfastR-tidying-college-football-play-by-play-data.md  cfbrecruitr-247sports-recruiting-package.md  chessR-for-chess-game-data.md  fastrhockey-for-hockey-data.md  intro-to-hoopR.md  introducing-cbb-npm.md  introducing-cfbscrapR.md  kenpomr-for-mens-basketball.md  kenpomr-for-mens-college-basketball.md  recruitR-for-college-sports-recruiting-data.md  sportsdataverse-node-js-module.md  sportsdataverse-python-module.md  wehoop-for-wnba-and-womens-college-basketball-data.md  wehoop-for-womens-basketball-data.md  worldfootballR-for-soccer-data.md
python/: data_fetcher.py  pyproject.toml
python/data/: input.txt  other.txt
scripts/: generateSitemap.js  sendEmail.js
styles/: Shared.module.css  Slug.module.css  shared.ts
types/: constants.ts
(+190 files in other folders)
